styles: fix up some spacing in the msg-list and user profiles

--- a/ui/less/com/msg-list.less
+++ b/ui/less/com/msg-list.less
@@ -39,7 +39,7 @@
   }
 }
 .msg-list-items {
-  padding-top: 40px;
+  padding-top: 45px;
   .empty {
     padding: 10px;
   }
